--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.2",
+    "request": "^2.88.2",
     "validator": "^13.1.1"
   },
   "devDependencies": {
