--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "youngprinnce <ajiboyeadedotun16@gmail.com> (htts://github.com/youngprinnce)",
   "license": "MIT",
